prod/src/objects/Dev__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <description>The security code to use the system</description>
        <label>Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of User</description>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Devs</relationshipLabel>
        <relationshipName>Devs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>canUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dev can Upload apps?</label>
        <type>Checkbox</type>
    </fields>
    <label>Dev</label>
    <nameField>
        <label>Dev Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>